kubernetes/operators/medik8s/fence-agents-remediation/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-fence-agents-remediation
  namespace: medik8s-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: medik8s-system
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
            - port: "8443"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toCIDR:
        - 192.168.1.0/24
      toPorts:
        - ports:
            - port: "623"
              protocol: UDP
            - port: "623"
              protocol: TCP
